--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/slider": "4.5.5",
     "expo": "~52.0.0-preview.16",
+    "expo-audio": "~0.2.3",
     "expo-constants": "~17.0.2",
     "expo-linking": "~7.0.2",
     "expo-router": "~4.0.0-preview.11",
@@ -19,13 +21,13 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.1",
+    "react-native-purchases": "^8.2.5",
+    "react-native-purchases-ui": "^8.2.5",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "4.0.0-beta.16",
     "react-native-web": "~0.19.13",
-    "tailwindcss": "^3.4.14",
-    "@react-native-community/slider": "4.5.5",
-    "expo-audio": "~0.2.3"
+    "tailwindcss": "^3.4.14"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
